Account controller duzenleme